<resources>
    <string name="app_name">Educa</string>
    <string name="contoh_gmail_com">contoh@gmail.com</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="konfirmasi_password">Konfirmasi password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="dashboard_txt">
        Bergabunglah bersama kami dan bantu generasi muda raih masa depan mereka!
    </string>
    <string name="dashboard_txt2">
        Proses pendaftarannya mudah dan cepat. Cukup klik tombol \"Daftar Sekarang\" di bawah ini dan ikuti langkah-langkahnya.
    </string>
    <string name="dashboard_btn">Daftar Sekarang</string>
    <string name="bimbel1">persiapan utb</string>
    <string name="bimbel2">persiapan utb</string>
    <string name="bimbel3">persiapan utb</string>
    <string name="bimbel4">persiapan utb</string>
    <string name="bimbel5">persiapan utb</string>
    <string name="price1">200 0000</string>
    <string name="price2">200 0000</string>
    <string name="price3">200 0000</string>
    <string name="price4">200 0000</string>
    <string name="price5">200 0000</string>

</resources>