<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="32dp">

    <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_txt"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppinssemibold"
            android:textColor="@color/black"
            android:layout_marginBottom="24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dashboardimg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_txt2"
            android:textAlignment="center"
            android:textSize="14sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/black"
            android:layout_marginVertical="24dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_btn"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_shape"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16dp"/>

</LinearLayout>