<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:fontFamily="@font/poppinsbold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="32sp"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/label_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_nama"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_nama"
            android:hint="@string/nama_anda"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:background="@drawable/input_shape"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_below="@+id/edt_nama"
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_email"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_email"
            android:hint="@string/contoh_gmail_com"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:background="@drawable/input_shape"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/label_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:text="@string/masukkan_password"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_pass"
            android:hint="********"
            android:inputType="textPassword"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:background="@drawable/input_shape"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/label_conf_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_pass"
            android:text="@string/konfirmasi_password"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/edt_conf_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_conf_pass"
            android:hint="********"
            android:inputType="textPassword"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:background="@drawable/input_shape"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_conf_pass"
            android:text="Register"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">
        </Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/btn_register"
            android:id="@+id/layout_loading"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:progressTint="@color/bluePrimary"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layout_loading"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/txt_belumpunyaakun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:fontFamily="@font/poppinsregular"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="14sp"
                android:layout_marginLeft="5sp"
                android:textColor="@color/bluePrimary"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>